manifests/monitoring/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: kiali-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https-kiali
        protocol: HTTPS
      hosts:
        - "kiali.local"
      tls:
        mode: SIMPLE
        credentialName: kiali-tls
